finalizamos rama-sass

--- a/pag/artesanales.html
+++ b/pag/artesanales.html
@@ -32,7 +32,7 @@
                     <li class="art"><a href="./artesanales.html"></a>Artesanales</li>
                     <li class="produc"><a href="./productos.html"> Productos</a></li>
                     <li class="recet"><a href="./recetas.html">Recetas</a></li>
-                    <li class="natu"><a href="../pag/desayunos.html">Desayunos</a></li>
+                    <li class="natu"><a href="./desayunos.html">Desayunos</a></li>
                 </ul>
             </nav>
 
