--- a/pag/recetas.html
+++ b/pag/recetas.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styls.css">
-    <title>PuntoSano</title>
+    <title>PuntoSano Recesa saludables</title>
 </head>
 
 <body>
     <div class="grilla-receta">
-        <header class="header-titulo">
+        <header class="header">
             <div class="header-logo">
                 <img src="../logoPS/ps logo negro.png" alt="" width="50%">
             </div>
@@ -25,21 +25,20 @@
 
         <main class="main">
             <nav class="menu">
-                <ul>
-                    <li class="home"><a href="../index.html"></a>Home</li>
-                    <li class="produc"><a href="./productos.html">Productos </a></li>
-                    <li class="art"><a href="./artesanales.html">Artesanales</a></li>
+                <ul class="menu-lista">
+                    <li class="home"><a href="../index.html">Home</a></li>
+                    <li class="art"><a href="./artesanales.html"></a>Artesanales</li>
+                    <li class="produc"><a href="./productos.html"> Productos</a></li>
                     <li class="recet"><a href="./recetas.html">Recetas</a></li>
-                    <li class="natu"><a href="../pag/desayunos.html">Desayunos</a></li>
+                    <li class="natu"><a href="./desayunos.html">Desayunos</a></li>
                 </ul>
-
             </nav>
 
             <div class="main-receta">
 
 
-                <article class="descriocion-recetas">
-                    <h2>Recetas Saludables </h2>
+                <article class="descripcion-recetas">
+                    <h2 class="descripcion-titulo">Recetas Saludables </h2>
                     <p>En Punto Sano, vos podes encontrar una amplia variedad de productos saludables
                         para tu dieta, desde alimentos frescos y naturales, hasta suplementos y vitaminas. Además,
                         Punto Sano
@@ -53,7 +52,7 @@
                         alguien sea vegano, vegetariano o tenga alergias alimentarias. Eleji la que mas te gusta!!!
                     </p>
 
-                    <h3>Te mostramos algunas</h3>
+                    <h3 class="descripcion-subtitulo">Te mostramos algunas</h3>
                 </article>
 
 
@@ -76,19 +75,19 @@
 
 
         <footer class="footer">
-            <div class="contacto-rece">
+            <div class="footer-contacto">
                 <h3>Contactos</h3>
-                <p>whatsAap 02216237628</p>
-                <p>instagram @PuntoSanotienda</p>
-                <p>facebook PuntoSanotienda</p>
+                <p>WhatsAap 02216237628</p>
+                <p>Instagram @PuntoSanotienda</p>
+                <p>Facebook PuntoSanotienda</p>
             </div>
-            <div class="pagos-rece">
+            <div class="footer-pagos">
                 <h3>Medios de Pagos</h3>
                 <p> -Transferencia/Efectivo 10% de DESCUENTO</p>
                 <p>-Tarjeta de credito hasta 3 cuotas sin interes</p>
                 <p>-Debito</p>
             </div>
-            <div class="mapa-rece">
+            <div class="footer-mapa">
                 <figure><iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52343.07030763407!2d-57.98818985717279!3d-34.92045289881356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a2e62b1f0085a1%3A0xbcfc44f0547312e3!2sLa%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1679170383415!5m2!1ses!2sar"
                         width="150" height="150" style="border: 10px;;" allowfullscreen="" loading="lazy"
