--- a/pag/productos.html
+++ b/pag/productos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/styls.css">
-    <title>Document</title>
+    <title>lista de Productos en Punto Sano</title>
 </head>
 
 <body>
@@ -26,11 +26,11 @@
         <main class="main-productos">
             <nav class="menu">
                 <ul class="menu-lista">
-                    <li class="menu-home"><a href="../index.html"></a>Home</li>
-                    <li class="menu-art"><a href="./artesanales.html">Artesanales</a></li>
-                    <li class="menu-produc"><a href="./pag/productos.html"> Productos</a></li>
-                    <li class="menu-recet"><a href="./recetas.html">Recetas</a></li>
-                    <li class="menu-natu"><a href="./desayunos.html">Desayunos</a></li>
+                    <li class="home"><a href="../index.html">Home</a></li>
+                    <li class="art"><a href="./artesanales.html"></a>Artesanales</li>
+                    <li class="produc"><a href="./productos.html"> Productos</a></li>
+                    <li class="recet"><a href="./recetas.html">Recetas</a></li>
+                    <li class="natu"><a href="./desayunos.html">Desayunos</a></li>
                 </ul>
             </nav>
 
